updates(*): overflow and scroll fix with stripe.

--- a/components/hero/hero-home/hero-home.sass
+++ b/components/hero/hero-home/hero-home.sass
@@ -10,34 +10,46 @@
   position: relative
   width: 100%
   height: 44vw
-  overflow-x: clip
+
+  &__stripe-container
+    position: absolute
+    top: 0
+    right: 0
+    width: 20%
+    height: 110%
+    overflow: hidden
 
   &__stripe
-    @include desktop
-      bottom: 40%
+    @include laptop-lg
+      bottom: 50%
       height: rem-calc(100)
     @include laptop
-      right: -30%
-      bottom: 35%
+      // right: -30%
+      bottom: 40%
       height: rem-calc(60)
     @include tablet-lg
-      right: -30%
-      bottom: 30%
+      // right: -30%
+      // bottom: 30%
       height: rem-calc(50)
     @include tablet
+      bottom: 45%
       height: rem-calc(40)
     @include nexus
-      bottom: 30%
+      // bottom: 30%
       height: rem-calc(30)
     @include phone-land-lg
-      bottom: 45%
+      // bottom: 45%
+      bottom: 55%
       height: rem-calc(25)
     @include phone-lg
-      bottom: 25%
       height: rem-calc(20)
+    @include phone
+      bottom: 40%
     position: absolute
-    right: -27%
-    bottom: 40%
+    // right: -27%
+    // bottom: 40%
+    bottom: 45%
+    left: -20%
     transform: rotate(-55deg)
     z-index: 2
     border-radius: rem-calc(60)
