--- a/components/hero/hero-pages/hero-pages.sass
+++ b/components/hero/hero-pages/hero-pages.sass
@@ -3,8 +3,8 @@
   //   height: 40vw
   // @include tablet
   //   height: 65vw
-  // @include nexus
-  //   height: 70vw
+  @include tablet
+    height: 30vw
   @include phone-land-lg
     height: 80vh
   @include phone-lg
@@ -14,32 +14,43 @@
   position: relative
   width: 100%
   height: calc(33vw - 100px)
-  overflow-x: clip
+
+  &__stripe-container
+    // @include laptop-lg
+    //   top: 15%
+    position: absolute
+    top: 0
+    right: 0
+    width: 20%
+    height: 115%
+    overflow: hidden
 
   &__stripe
-    @include desktop
-      bottom: 50%
+    @include laptop-lg
+      bottom: 65%
       height: rem-calc(100)
     @include laptop
-      right: -30%
-      bottom: 55%
+      // right: -30%
+      bottom: 70%
       height: rem-calc(60)
     @include tablet-lg
-      right: -30%
-      bottom: 60%
+      bottom: 75%
+      left: -10%
       height: rem-calc(50)
-    @include tablet
-      bottom: 70%
+    @include tablet-md
+      bottom: 80%
       height: rem-calc(40)
+    @include tablet
+      bottom: 60%
     @include phone-land-lg
-      bottom: 40%
+      bottom: 50%
     @include phone-lg
       bottom: 35%
     @include phone
-      bottom: 20%
+      bottom: 30%
     position: absolute
-    right: -27%
     bottom: 60%
+    left: -20%
     transform: rotate(-55deg)
     z-index: 1
     border-radius: rem-calc(60)
@@ -70,7 +81,7 @@
       width: 40%
     @include tablet
       // left: -10%
-      width: 30%
+      width: 40%
     @include phone-lg
       // height: 80%
       left: -10%
